// Copyright Â© 2017 The Things Network Foundation, distributed under the MIT license (see LICENSE file)

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package ttn.v3;

option go_package = "github.com/TheThingsNetwork/ttn/pkg/ttnpb";

// End device identifiers are carried with uplink and downlink messages
// Unknown fields are left empty
message EndDeviceIdentifiers {
  // TTN Device ID
  string device_id = 1 [(gogoproto.customname) = "DeviceID"];
  // TTN Application ID
  string application_id = 2 [(gogoproto.customname) = "ApplicationID"];
  // TTN Tenant ID (in case of multi-tenant network server)
  string tenant_id = 3;

  // LoRaWAN DevEUI
  bytes dev_eui = 4 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/pkg/types.EUI64", (gogoproto.customname) = "DevEUI"];
  // LoRaWAN JoinEUI (or AppEUI for LoRaWAN 1.0 end devices)
  bytes join_eui = 5 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/pkg/types.EUI64", (gogoproto.customname) = "JoinEUI"];
  // LoRaWAN DevAddr
  bytes dev_addr = 6 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/pkg/types.DevAddr"];
}
